--- a/index.html
+++ b/index.html
@@ -37,9 +37,59 @@
       font-size: 20vw;
       font-family: sans-serif;
     }
+
+    #navlandscapemessage {
+      font-size: 4vw;
+      text-align: center;
+      width: 100%;
+    }
   </style>
 </head>
 <body>
+  <script>
+    (function() {
+      var PORTRAIT = 0, LANDSCAPE = 1;
+
+      function fixNavLandscape(orientation) {
+        if (orientation == LANDSCAPE) {
+          if ($(':mobile-pagecontainer').pagecontainer('getActivePage')[0].id == 'nav') {
+            $(':mobile-pagecontainer').pagecontainer(
+              'change', '#navlandscape', { changeHash: false });
+          }
+        } else if (orientation == PORTRAIT) {
+          if ($(':mobile-pagecontainer').pagecontainer('getActivePage')[0].id == 'navlandscape') {
+            $(':mobile-pagecontainer').pagecontainer(
+              'change', '#nav', { changeHash: false });
+          }
+        }
+      }
+
+      window.addEventListener('orientationchange', function() {
+        var orientation;
+        if (window.innerHeight > window.innerWidth) {
+          orientation = LANDSCAPE;
+        } else {
+          orientation = PORTRAIT;
+        }
+        fixNavLandscape(orientation);
+      });
+      $(function() {
+        $(':mobile-pagecontainer').on('pagecontainerchange', function(event, ui) {
+          if (ui.prevPage[0].id == 'nav' || ui.prevPage[0].id == 'navlandscape') {
+            return;
+          }
+          var orientation;
+          if (window.innerHeight < window.innerWidth) {
+            orientation = LANDSCAPE;
+          } else {
+            orientation = PORTRAIT;
+          }
+          fixNavLandscape(orientation);
+        });
+      });
+    })();
+  </script>
+
   <div data-role="page" id="nav">
     <div data-role="header">
       <h1>Navigation</h1>
@@ -153,6 +203,53 @@
         });
       })();
     </script>
+  </div>
+
+  <div data-role="page" id="navlandscape">
+    <div data-role="content">
+      <div id="navlandscapemessage">
+        Navigation is not supported in landscape mode. Please rotate your
+        device to the portrait orientation to continue navigation.
+      </div>
+    </div>
+  </div>
+
+  <div data-role="page" id="content1">
+    <div data-role="header">
+      <h1>Content One</h1>
+    </div>
+
+    <div data-role="content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+      <p><a href="#nav" data-role="button">Navigate to Next Location</a></p>
+    </div>
+  </div>
+
+  <div data-role="page" id="content2">
+    <div data-role="header">
+      <h1>Content Two</h1>
+    </div>
+
+    <div data-role="content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+      <p><a href="#nav" data-role="button">Navigate to Next Location</a></p>
+    </div>
   </div>
 </body>
 </html>
